# LoveACE

./: .gitattributes  .gitignore  .markdownlint.json  LICENSE  README.md  main.py  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-docs.yml
config/: __init__.py  logger.py  manager.py  models.py
database/: __init__.py  creator.py  isim.py  user.py
docs/: ISIM_API.md  config.md  contributing.md  deploy.md  disclaimer.md  getting-started.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/components/: SwaggerUI.vue
docs/.vitepress/theme/: custom.css  index.ts
docs/api/: index.md
provider/aufe/: client.py
provider/aufe/aac/: __init__.py  depends.py  model.py
provider/aufe/isim/: __init__.py  depends.py  model.py
provider/aufe/jwc/: __init__.py  depends.py  model.py  plan_completion_model.py  semester_week_model.py
provider/loveac/: authme.py
router/: common_model.py
router/aac/: __init__.py  model.py
router/invite/: __init__.py  model.py
router/isim/: __init__.py  model.py
router/jwc/: __init__.py  evaluate.py  evaluate_model.py  model.py  plan_completion.py
router/login/: __init__.py  model.py
router/user/: __init__.py  model.py
utils/: __init__.py  file_manager.py  s3_client.py
